# finquant

./: README.md  pyproject.toml
.github/workflows/: homebrew.yml  publish.yml
examples/: 01_basic.py  02_custom_strategy.py  11_huatai_trading.py  12_factor_ic_analysis.py  13_quantlab_demo.py
finquant/: __init__.py  api.py
finquant/optimize/: walkforward.py
finquant/research/: __init__.py
finquant/research/factor/: __init__.py  backtest.py  correlation.py  ic_analysis.py  synthesizer.py
finquant/trading/broker/: __init__.py  eastmoney.py
tests/: test_analysis.py  test_limit_suspension.py  test_performance.py  test_risk.py  test_slippage.py
