[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FinvQunat"
version = "1.0.0"
description = "智能量化交易平台 - 回测 / 模拟 / 实盘"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MeepoQuant", email = "contact@meepoquant.com"}
]
keywords = ["quantitative", "trading", "backtest", "finance", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"

# 完整依赖
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "scipy>=1.8.0",
    "finshare>=1.0.2",
    "websockets>=10.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
data = ["finshare>=1.0.2"]
network = ["websockets>=10.0", "aiohttp>=3.8.0", "requests>=2.28.0"]
console = ["prompt_toolkit>=3.0"]

[project.scripts]
finquant = "finquant.console.rich_console:main"
finquant-simple = "finquant.console:main"

[project.urls]
Homepage = "https://meepoquant.com"
Documentation = "https://finquant.readthedocs.io"
Repository = "https://github.com/meepo-quant/finquant"

[tool.setuptools.packages.find]
where = ["."]
include = ["finquant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
